composer.json update

--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "illuminate/support": "^5.0|^6.0"
+        "php": "^7.2",
+        "illuminate/support": "^6.0|^7.0",
+        "laravel/helpers": "^1.2"
     },
     "autoload": {
         "psr-0": {
