--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     ],
     "require": {
         "php": "^7.2",
-        "illuminate/support": "^6.0|^7.0",
-        "laravel/helpers": "^1.2"
+        "illuminate/support": "^6.0|^7.0|^8.0",
+        "laravel/helpers": "^1.3"
     },
     "autoload": {
         "psr-0": {
